<resources>
    <string name="app_name">Personal Organiser</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="Cal">Calender</string>

    <string name="title_activity_event">Event</string>

    <string name="friends">Friends</string>

    <string name="event">New Button</string>

    <string name="other">Gallery</string>

    <string name="title_activity_friends">Friends</string>

    <string name="title_activity_gallery">Gallery</string>

    <string name="addF">Add Friend</string>

    <string name="editF">Edit Friend</string>

    <string name="title_activity_freinds">friends</string>

    <string name="min">min</string>

    <string name="title">Details</string>

    <string name="firstName">Enter First Name: </string>

    <string name="lastName">Enter Last Name: </string>

    <string name="phone">Enter Phone Number: </string>

    <string name="address">Address </string>

    <string name="add">Add</string>

    <string name="delete">Delete</string>

    <string name="modify">Modify</string>

    <string name="view">View</string>

    <string name="view_all">View All</string>

    <string name="Viewbut">View</string>

    <string name="Editbut">Edit</string>

    <string name="Addbut">Add</string>

    <string name="Delbut">Delete</string>

    <string name="ViewAllBut">View All</string>

    <string name="fname">First Name</string>

    <string name="Lname">Last Name</string>

    <string name="age">Age</string>

    <string name="Home">Home</string>

    <string name="last">Last Name</string>

    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="todo">To-Do</string>
    <string name="title_activity_todo">actTodo</string>
    <string name="addtodo">Add Item</string>
    <string name="editTodo">Edit Item</string>
    <string name="todoitem">Enter a new item</string>
    <string name="freindsInst"> To add friend please fill in details
    then click add button. \n \n To edit enter first name then edit the fields and press edit. \n \n To delete a record enter the first name and then press delete.</string>
    <string name="TitleP">Personal Organiser</string>
    <string name="tododel">Delete</string>
    <string name="vall">View All</string>
    <string name="desctodo">New Task Description</string>
    <string name="todoloc">New Task Location</string>
    <string name="todostat">New Task Status</string>
    <string name="todohome">Home</string>
</resources>
