<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
    android:id="@+id/todo">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todoItems"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnAddto"
        android:layout_above="@+id/description" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addtodo"
        android:id="@+id/btnAddto"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editTodo"
        android:id="@+id/btnEditTodo"
        android:layout_below="@+id/btnAddto"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tododel"
        android:id="@+id/btnDelete"
        android:layout_below="@+id/btnEditTodo"
        android:layout_alignStart="@+id/btnAddto"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vall"
        android:id="@+id/btnVAll"
        android:layout_below="@+id/btnDelete"
        android:layout_alignStart="@+id/btnEditTodo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desctodo"
        android:id="@+id/description"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editdesc"
        android:layout_below="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todoloc"
        android:layout_below="@+id/editdesc"
        android:layout_alignParentStart="true"
        android:text="@string/todoloc" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editLocation"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/todoloc"
        android:layout_alignParentLeft="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/todostat"
        android:layout_below="@+id/editLocation"
        android:layout_alignParentStart="true"
        android:text="@string/todostat" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editStatus"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/todostat"
        android:layout_alignParentLeft="true"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todohome"
        android:id="@+id/homeBtnTodo"
        android:layout_below="@+id/btnVAll"
        android:layout_alignStart="@+id/btnVAll" />

</RelativeLayout>