
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
	android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context="au.com.deangoddard_17822594.assignment_1.Freind">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:columnCount="3"
        android:rowCount="2"
        android:backgroundTint="#223242"
        android:backgroundTintMode="add"
        android:clickable="false"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DelBut"
            android:text="@string/Delbut"
            android:layout_row="0"
            android:layout_column="0"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Addbut"
            android:id="@+id/AddBut"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Editbut"
            android:id="@+id/EditBut"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Viewbut"
            android:id="@+id/ViewBut"
            android:layout_row="1"
            android:layout_column="0"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:id="@+id/homebutton"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:text="@string/ViewAllBut"
            android:id="@+id/btnViewAll"
            android:layout_row="1"
            android:layout_column="2"/>
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fname"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editFName"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        android:id="@+id/textView2"
        android:layout_below="@+id/editFName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPhoneNo"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView3"
        android:layout_below="@+id/editPhoneNo"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:inputType="textCapCharacters"/>

</RelativeLayout>