<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="au.com.deangoddard_17822594.assignment_1.Friends"
    android:background="#50d6f5">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addF"
        android:id="@+id/addF"
        android:src="vb"
        android:contentDescription="@string/min"
        android:layout_alignTop="@+id/editF"
        android:layout_alignParentStart="true"
        android:layout_marginStart="105dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editF"
        android:id="@+id/editF"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/addF"
        android:src="@drawable/ic_add_circle_black_24dp"
        android:contentDescription="minus" />

</RelativeLayout>
